[gd_scene load_steps=22 format=3 uid="uid://cwlpgtbhderfk"]

[ext_resource type="Script" path="res://CharacterCreator/CharacterCreator.gd" id="1_lo01y"]
[ext_resource type="Texture2D" uid="uid://pebqa3f2by7w" path="res://SaveMenu/assets/saveslotmenubackground.png" id="2_tug1n"]
[ext_resource type="Texture2D" uid="uid://r6dv55axd7ph" path="res://CharacterCreator/assets/items_window.png" id="3_r3ka1"]
[ext_resource type="Texture2D" uid="uid://clsu7rj8rs64b" path="res://CharacterCreator/assets/characterbackground.png" id="4_x02uw"]
[ext_resource type="Texture2D" uid="uid://dkwdh681gnvlq" path="res://CharacterCreator/assets/header.png" id="5_s3v7b"]
[ext_resource type="Texture2D" uid="uid://bfjbtjvq7mwk2" path="res://CharacterCreator/assets/button_finish.png" id="6_vmlfm"]
[ext_resource type="Texture2D" uid="uid://b3mbnko1miky5" path="res://CharacterCreator/assets/button_finish_down.png" id="7_tu7bn"]
[ext_resource type="PackedScene" uid="uid://bhrqe0xbobwf5" path="res://CharacterCreator/CategoryButtons/category_buttons.tscn" id="8_7sw5f"]
[ext_resource type="PackedScene" uid="uid://dsbcfpv14xee0" path="res://CharacterCreator/ItemButtons/item_buttons.tscn" id="9_evum5"]
[ext_resource type="PackedScene" uid="uid://c57wj6nmw2lgl" path="res://CharacterCreator/Slider/slider.tscn" id="10_naqu7"]
[ext_resource type="PackedScene" uid="uid://cup2getx61mv4" path="res://Character/Character.tscn" id="11_ao468"]
[ext_resource type="PackedScene" uid="uid://bgu8oe87qd6w7" path="res://Character/Player/player.tscn" id="12_yshow"]
[ext_resource type="Script" path="res://CharacterCreator/CharacterNameArea.gd" id="13_lrmj7"]
[ext_resource type="FontFile" uid="uid://bbvvk8cijnn3b" path="res://PlunderFont.ttf" id="14_a10nl"]
[ext_resource type="Texture2D" uid="uid://s5jx1ajy7ojo" path="res://CharacterCreator/assets/entername.png" id="15_t416m"]
[ext_resource type="AudioStream" uid="uid://ce27gvo2x03e" path="res://SFX/headerslide.wav" id="16_gadc3"]
[ext_resource type="AudioStream" uid="uid://b3i4dcjmr2163" path="res://SFX/finishbutton.wav" id="17_a63l4"]
[ext_resource type="AudioStream" uid="uid://12ifx17brape" path="res://SFX/itembutton.wav" id="18_ny4c4"]
[ext_resource type="AudioStream" uid="uid://cmlxffdhf361q" path="res://SFX/categorybutton.wav" id="19_yfuvq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mmy72"]

[sub_resource type="Theme" id="Theme_8c7ht"]
LineEdit/colors/caret_color = Color(0.988235, 0.878431, 0.658824, 1)
LineEdit/colors/font_selected_color = Color(0.988235, 0.878431, 0.658824, 1)
LineEdit/colors/selection_color = Color(0.521569, 0.521569, 0.521569, 1)
LineEdit/styles/focus = SubResource("StyleBoxEmpty_mmy72")

[node name="CharacterCreator" type="Node2D"]
position = Vector2(240, 135)
script = ExtResource("1_lo01y")

[node name="Window" type="Sprite2D" parent="."]
texture = ExtResource("2_tug1n")

[node name="ItemsWindow" type="Sprite2D" parent="Window"]
position = Vector2(61, -11)
texture = ExtResource("3_r3ka1")

[node name="CharacterBackground" type="Sprite2D" parent="Window"]
position = Vector2(-157, -80)
texture = ExtResource("4_x02uw")
centered = false

[node name="Header" type="Sprite2D" parent="Window"]
z_index = -1
position = Vector2(-72, -89)
texture = ExtResource("5_s3v7b")
centered = false

[node name="FinishButton" type="TextureButton" parent="Window"]
offset_left = 95.0
offset_top = 63.0
offset_right = 142.0
offset_bottom = 81.0
action_mode = 0
texture_normal = ExtResource("6_vmlfm")
texture_pressed = ExtResource("7_tu7bn")
texture_hover = ExtResource("7_tu7bn")

[node name="CategoryButtons" parent="Window" instance=ExtResource("8_7sw5f")]
position = Vector2(-16, -76)

[node name="ItemButtons" parent="Window" instance=ExtResource("9_evum5")]
position = Vector2(-15, -47)

[node name="Slider" parent="Window" instance=ExtResource("10_naqu7")]
position = Vector2(146, -41)

[node name="Character" parent="." instance=ExtResource("11_ao468")]
visible = false
position = Vector2(-93, 42)
scale = Vector2(4, 4)

[node name="Player" parent="." instance=ExtResource("12_yshow")]
position = Vector2(-93, 42)
scale = Vector2(4, 4)
customization_only = true

[node name="CharacterNameArea" type="Node2D" parent="."]
script = ExtResource("13_lrmj7")

[node name="CaptainLabel" type="Label" parent="CharacterNameArea"]
offset_left = -157.0
offset_top = 64.0
offset_right = -104.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0.45098, 0.4, 0.301961, 1)
theme_override_fonts/font = ExtResource("14_a10nl")
theme_override_font_sizes/font_size = 11
text = "Captain"

[node name="Background" type="Sprite2D" parent="CharacterNameArea"]
position = Vector2(-34, 71)
texture = ExtResource("15_t416m")

[node name="NameInput" type="LineEdit" parent="CharacterNameArea"]
offset_left = -101.0
offset_top = 60.0
offset_right = 33.0
offset_bottom = 82.0
theme = SubResource("Theme_8c7ht")
theme_override_colors/font_color = Color(0.988235, 0.878431, 0.658824, 1)
theme_override_fonts/font = ExtResource("14_a10nl")
theme_override_font_sizes/font_size = 11
text = "Enter Name..."
max_length = 15
flat = true
select_all_on_focus = true
caret_blink = true

[node name="HeaderSlideSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_gadc3")

[node name="FinishButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_a63l4")

[node name="ItemButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_ny4c4")

[node name="CategoryButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_yfuvq")
